<resources>
    <string name="app_name">EV ConData</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">EV ConData</string>
    <string name="nav_header_subtitle">Electric Vehicle Consumption Database</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_my_car">My car</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_car">My Car</string>
    <string name="my_consumption">My Consumption</string>
    <string name="community_consumption">Community Consumption</string>
    <string name="cars">Cars</string>
    <string name="map">Map</string>
    <string name="average">Ø</string>
    <string name="arrow_up">↑</string>
    <string name="arrow_down">↓</string>
    <string name="electric_car_symbol">Electric car symbol</string>
    <string name="name">Name</string>
    <string name="distance_km">Distance (km)</string>
    <string name="consumption_kwh">Consumption (kwh)</string>
    <string name="temperature">Temperature (°C)</string>
    <string name="altitude_up">Altitude ↑ (m)</string>
    <string name="altitude_down">Altitude ↓ (m)</string>
    <string name="save">SAVE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">UPDATE</string>
    <string name="date">Date</string>
    <string name="hint_car_name">Car Name</string>
    <string name="average_symbol">Ø</string>
    <string name="kwh">kwh</string>
    <string name="question_mark">\?</string>
    <string name="description_image_of_the_car">Image of the car</string>
    <string name="power">Power</string>
    <string name="kw">kw</string>
    <string name="battery">Battery</string>
    <string name="range">Range</string>
    <string name="km">km</string>
    <string name="power_symbol">Power symbol</string>
    <string name="speed_symbol">Speed symbol</string>
    <string name="max_speed">Max Speed</string>
    <string name="road_symbol">road symbol</string>
    <string name="chart_symbol">Chart symbol</string>
    <string name="consumption">Consumption</string>
    <string name="battery_symbol">Battery symbol</string>
    <string name="battery_charging_symbol">Battery charging symbol</string>
    <string name="charging">Charging</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout_text">LOGOUT</string>
    <string name="menu_login">LOGIN</string>
    <string name="publish_data">Publish Data</string>
    <string name="button_to_add_a_new_consumption_entry">Button to add a new consumption entry</string>
    <string name="wltp">WLTP</string>
    <string name="acceleration">Acceleration</string>
    <string name="me">Me</string>
    <string name="community">Community</string>
    <string name="publish">Publish</string>
    <string name="offline">OFFLINE</string>
</resources>