<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="car"
            type="com.example.evcondata.model.Car"
            />
        <variable
            name="clickListener"
            type="com.example.evcondata.ui.car.CarItemListener"
            />
    </data>

    <LinearLayout
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/card_view"
            android:layout_margin="5dp"
            card_view:cardCornerRadius="15dp"
            android:onClick="@{() -> clickListener.onClick(car)}">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/item_car_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/hint_car_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@={car.name}"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginBottom="5dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/average_symbol"/>

                <TextView
                    android:id="@+id/item_consumption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/question_mark"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@={car.wltpConsumption + ``}"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginBottom="5dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/kwh"/>

            </LinearLayout>

                <ImageView
                    android:id="@+id/item_image"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:adjustViewBounds="true"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/description_image_of_the_car"
                    android:onClick="@{() -> clickListener.onClick(car)}"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginBottom="5dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/power"/>

                    <TextView
                        android:id="@+id/item_power"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginBottom="5dp"
                        android:hint="@string/question_mark"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@={car.power + ``}"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/kw"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginBottom="5dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/battery"/>

                    <TextView
                        android:id="@+id/item_battery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginBottom="5dp"
                        android:hint="@string/question_mark"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@={car.battery + ``}"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/kwh"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginBottom="5dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/range"/>

                    <TextView
                        android:id="@+id/item_wltp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginBottom="20dp"
                        android:hint="@string/question_mark"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@={car.wltpRange + ``}"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/km"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>