<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/simpleTableLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="parent"> <!-- stretch the second column of the layout-->

            <!-- first row of the table layout-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/item_car_image"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:adjustViewBounds="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_span="2"
                    android:contentDescription="@string/description_image_of_the_car" />
            </TableRow>

            <!-- second row of the table layout-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_power"
                        android:contentDescription="@string/power_symbol" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/power"
                            android:textAlignment="center"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/item_power"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:hint="@string/question_mark"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_speed"
                        android:contentDescription="@string/speed_symbol" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/max_speed"
                            android:textAlignment="center"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/item_speed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:hint="@string/question_mark"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </TableRow>

            <!-- third row of the table layout-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_road"
                        android:contentDescription="@string/road_symbol" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/range"
                            android:textAlignment="center"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/item_wltp_range"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:hint="@string/question_mark"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_chart"
                        android:contentDescription="@string/chart_symbol" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/consumption"
                            android:textAlignment="center"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/item_wltp_consumption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:hint="@string/question_mark"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </TableRow>

            <!-- fourth row of the table layout-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_battery"
                        android:contentDescription="@string/battery_symbol" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/battery"
                            android:textAlignment="center"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/item_battery"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:hint="@string/question_mark"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_battery_charging"
                        android:contentDescription="@string/battery_charging_symbol" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/charging"
                            android:textAlignment="center"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/item_charge_speed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:hint="@string/question_mark"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </TableRow>

        </TableLayout>






    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>