<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="LabelFor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    tools:context=".ui.consumption.AddEditConsumptionFragment">

    <View
        android:id="@+id/centerVerticalShim"
        android:layout_width="0.1dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/centerHorizontalShim"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_centerVertical="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:text="@string/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/centerVerticalShim" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="date"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/centerVerticalShim"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDate"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="time"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/centerVerticalShim"
        app:layout_constraintTop_toBottomOf="@+id/textViewDate"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="75dp"
        android:layout_height="74dp"
        android:layout_marginVertical="30dp"
        android:contentDescription="@string/electric_car_symbol"
        android:src="@drawable/ic_electric_car"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:text="@string/name"
        app:layout_constraintEnd_toStartOf="@+id/centerVerticalShim"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textViewDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance_km"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/centerVerticalShim"
        app:layout_constraintTop_toTopOf="@+id/textViewName" />

    <EditText
        android:id="@+id/EditTextName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textAlignment="center"
        android:nextFocusDown="@+id/EditTextDistance"
        app:layout_constraintEnd_toStartOf="@+id/centerVerticalShim"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/EditTextDistance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textAlignment="center"
        android:nextFocusDown="@+id/EditTextConsumption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/centerVerticalShim"
        app:layout_constraintTop_toBottomOf="@+id/textViewDistance"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textViewConsumption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        android:text="@string/consumption_kwh"
        app:layout_constraintEnd_toStartOf="@+id/centerVerticalShim"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextName" />

    <TextView
        android:id="@+id/textViewTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/centerVerticalShim"
        app:layout_constraintTop_toTopOf="@+id/textViewConsumption" />


    <EditText
        android:id="@+id/EditTextConsumption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:nextFocusDown="@+id/EditTextTemperature"
        app:layout_constraintEnd_toStartOf="@+id/centerVerticalShim"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewConsumption"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/EditTextTemperature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:textAlignment="center"
        android:nextFocusDown="@+id/EditTextAltitudeUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/centerVerticalShim"
        app:layout_constraintTop_toBottomOf="@+id/textViewTemperature"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textViewAltitudeUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        android:text="@string/altitude_up"
        app:layout_constraintEnd_toStartOf="@+id/centerVerticalShim"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextConsumption" />

    <TextView
        android:id="@+id/textViewAltitudeDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altitude_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/centerVerticalShim"
        app:layout_constraintTop_toTopOf="@+id/textViewAltitudeUp" />

    <EditText
        android:id="@+id/EditTextAltitudeUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:textAlignment="center"
        android:nextFocusDown="@+id/EditTextAltitudeDown"
        app:layout_constraintEnd_toStartOf="@+id/centerVerticalShim"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAltitudeUp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/EditTextAltitudeDown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:textAlignment="center"
        android:nextFocusDown="@+id/buttonSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/centerVerticalShim"
        app:layout_constraintTop_toBottomOf="@+id/textViewAltitudeDown"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextAltitudeUp" />

</androidx.constraintlayout.widget.ConstraintLayout>